<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:onClick="onClickUser"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="@dimen/gen_margin"
        android:text="@string/name"
        android:textColor="@color/bckActUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gen_margin"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="@dimen/gen_margin"
        android:text="@string/id_sample"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginLeft="@dimen/data_left"
        android:layout_marginTop="@dimen/gen_margin"
        android:text="@string/name_sample"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="@dimen/gen_margin"
        android:layout_marginTop="@dimen/ten_margin"
        android:layout_marginBottom="@dimen/gen_margin"
        android:text="@string/birthdate"
        android:textColor="@color/bckActUser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gen_margin"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="@dimen/four_margin"
        android:text="@string/id"
        android:textColor="@color/bckActUser"
        app:layout_constraintEnd_toStartOf="@+id/tvId"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBirthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginLeft="@dimen/data_left"
        android:layout_marginTop="@dimen/ten_margin"
        android:layout_marginBottom="@dimen/gen_margin"
        android:text="@string/birthdate_sample"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

</androidx.constraintlayout.widget.ConstraintLayout>