<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".views.ActivityUser">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginRight="50dp"
        android:textColorHint="#FFFFFF"
        app:boxBackgroundColor="#00B10808"
        app:boxStrokeColor="#000D47FA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="50dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ednombre"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="30dp"
            android:hint="@string/name"
            android:shadowColor="#FF0000"
            android:textColor="@color/white"
            android:textColorHint="@android:color/white"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="30dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
        tools:layout_editor_absoluteX="204dp">

        <TextView
            android:id="@+id/tvfecha"
            android:layout_width="0dp"
            android:layout_height="41dp"
            android:layout_marginLeft="55dp"
            android:layout_weight="9"
            android:gravity="center_vertical"
            android:text="@string/birthdate"
            android:textColor="#FFFFFF"
            android:textColorHint="#00FFFFFF"
            android:textSize="20sp"
            android:layout_marginStart="55dp" />

        <ImageButton
            android:id="@+id/btnpf"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="50dp"
            android:layout_weight="1"
            android:background="#00BBA0A0"
            android:contentDescription="@string/birthdate"
            android:src="@android:drawable/ic_menu_my_calendar"
            tools:layout_editor_absoluteX="-2dp"
            tools:layout_editor_absoluteY="112dp"
            android:layout_marginEnd="50dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnAñadir"
        android:layout_width="150dp"
        android:layout_height="72dp"
        android:layout_marginBottom="80dp"
        android:shadowColor="#0008DDA0"
        android:text="@string/btn_añadir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>